--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
         .hidden {
             display: none;
         }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
@@ -20,10 +26,35 @@
     <div id="error" class="hidden">Something went wrong</div>
     <ul id="todos">
         {% for d in data: %}
-        <li>{{ d.description }}</li>
+        <li><input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %}>{{ d.description }}</li>
         {% endfor %}
     </ul>
     <script>
+        const checkboxes = document.getElementsByClassName("check-completed");
+        for (let i = 0; i < checkboxes.length; i++) {
+            const checkbox = checkboxes[i];
+            checkbox.onchange = function(event) {
+                console.log("event", event);
+                const newCompleted = event.target.checked;
+                const todoId = event.target.dataset["id"];
+                fetch("/todos/" + todoId + "/set-completed", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        "completed": newCompleted
+                    }),
+                    headers: {
+                        "Content-Type": "application/json"
+                    }
+                })
+                .then(function() {
+                    document.getElementById("error").className = "hidden";
+                })
+                .catch(function() {
+                    document.getElementById("error").className = "";
+                });
+            }
+        }
+
         document.getElementById("form").onsubmit = function(event) {
             event.preventDefault();
             fetch("/todos/create", {
